--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/M.png" id="light-favicon"  media="(prefers-color-scheme: light)"/>
-    <link rel="icon" href="%PUBLIC_URL%/M.png" id="dark-favicon"  media="(prefers-color-scheme: dark)"/>
+    <link rel="icon" href="%PUBLIC_URL%/M-dark.png" id="dark-favicon"  media="(prefers-color-scheme: dark)"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
